--- a/assets/css/scss/_customizer-colours.scss
+++ b/assets/css/scss/_customizer-colours.scss
@@ -44,17 +44,11 @@
 		&:visited {
 			border: 1px solid $shadow;
 		}
-	}
-}
 
-@mixin customizer-aepo-button-cta-colours ($shadow: #DFDFDF) {
-	.btn {
-		&.cta-btn {
-			&,
-			&:active,
-			&:visited {
-				box-shadow: 0 0 25px 0 $shadow;
-			}
+		&:hover,
+		&:hover:active,
+		&:focus {
+			box-shadow: 0 0 25px 0 $shadow;
 		}
 	}
 }
