--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 /*
-Theme Name:   AEPO
-Description:  AEPO LSX Child Theme
+Theme Name:   Minimal
+Description:  Minimal LSX Child Theme
 Author:       LightSpeed
 Author URI:   https://www.lsdev.biz/
 Template:     lsx
 Version:      1.0.0
 License:      GPL3
 License URI:  https://www.gnu.org/licenses/gpl-3.0.html
-Text Domain:  aepo-lsx-child
+Text Domain:  minimal-lsx-child
 */
