--- a/assets/css/scss/custom.scss
+++ b/assets/css/scss/custom.scss
@@ -1,7 +1,7 @@
 /**
- * AEPO styles.
+ * MINIMAL styles.
  *
- * @package aepo-lsx-child
+ * @package minimal-lsx-child
  */
 
 // Global
@@ -23,7 +23,7 @@
 @import 'footer';
 @import 'content';
 
-@import 'content-aepo-banner';
-@import 'content-aepo-widget-text';
-@import 'content-aepo-widget-posts';
-@import 'content-aepo-widget-testimonials';
+@import 'content-minimal-banner';
+@import 'content-minimal-widget-text';
+@import 'content-minimal-widget-posts';
+@import 'content-minimal-widget-testimonials';
