--- a/assets/css/custom-rtl.css
+++ b/assets/css/custom-rtl.css
@@ -1,4 +1,4 @@
-/** AEPO styles. @package aepo-lsx-child */
+/** MINIMAL styles. @package minimal-lsx-child */
 @media (min-width: 1200px) { .container { width: 970px; } }
 
 .col-xs-1, .col-sm-1, .col-md-1, .col-lg-1, .col-xs-2, .col-sm-2, .col-md-2, .col-lg-2, .col-xs-3, .col-sm-3, .col-md-3, .col-lg-3, .col-xs-4, .col-sm-4, .col-md-4, .col-lg-4, .col-xs-5, .col-sm-5, .col-md-5, .col-lg-5, .col-xs-6, .col-sm-6, .col-md-6, .col-lg-6, .col-xs-7, .col-sm-7, .col-md-7, .col-lg-7, .col-xs-8, .col-sm-8, .col-md-8, .col-lg-8, .col-xs-9, .col-sm-9, .col-md-9, .col-lg-9, .col-xs-10, .col-sm-10, .col-md-10, .col-lg-10, .col-xs-11, .col-sm-11, .col-md-11, .col-lg-11, .col-xs-12, .col-sm-12, .col-md-12, .col-lg-12 { padding-right: 10px; padding-left: 10px; }
@@ -41,7 +41,7 @@ h3, .h3 { font-family: 'Avenir Book'; }
 
 #comments .media-list .media .media-heading { font-family: 'Helvetica Neue'; }
 
-.aepo-slider-slide-tagline { font-family: 'Avenir'; }
+.minimal-slider-slide-tagline { font-family: 'Avenir'; }
 
 h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 { letter-spacing: 5px; text-transform: uppercase; }
 
@@ -104,104 +104,104 @@ h3, h5, h6, .h3, .h5, .h6 { font-weight: normal; }
 
 .content-area, .widget-area { font-weight: 300; }
 
-.aepo-slider .slick-arrow { background: transparent; border: none; border-radius: 50%; font: 0/0 a; height: 50px; padding: 0; position: absolute; text-shadow: none; top: 50%; -webkit-transform: translateY(-50%); transform: translateY(-50%); width: 50px; z-index: 3; }
+.minimal-slider .slick-arrow { background: transparent; border: none; border-radius: 50%; font: 0/0 a; height: 50px; padding: 0; position: absolute; text-shadow: none; top: 50%; -webkit-transform: translateY(-50%); transform: translateY(-50%); width: 50px; z-index: 3; }
 
-.aepo-slider .slick-arrow:before { content: ''; display: block; height: 50px; width: 50px; background: transparent url(../images/sprite-arrows@2x.png) no-repeat 100% 0; background-size: 100px 100px; }
+.minimal-slider .slick-arrow:before { content: ''; display: block; height: 50px; width: 50px; background: transparent url(../images/sprite-arrows@2x.png) no-repeat 100% 0; background-size: 100px 100px; }
 
-.aepo-slider .slick-arrow.slick-prev { right: 3rem; }
+.minimal-slider .slick-arrow.slick-prev { right: 3rem; }
 
-.aepo-slider .slick-arrow.slick-prev:before { background-position: 100% 0; }
+.minimal-slider .slick-arrow.slick-prev:before { background-position: 100% 0; }
 
-.aepo-slider .slick-arrow.slick-prev:hover:before { background-position: 100% -50px; }
+.minimal-slider .slick-arrow.slick-prev:hover:before { background-position: 100% -50px; }
 
-.aepo-slider .slick-arrow.slick-next { left: 3rem; }
+.minimal-slider .slick-arrow.slick-next { left: 3rem; }
 
-.aepo-slider .slick-arrow.slick-next:before { background-position: -50px 0; }
+.minimal-slider .slick-arrow.slick-next:before { background-position: -50px 0; }
 
-.aepo-slider .slick-arrow.slick-next:hover:before { background-position: -50px -50px; }
+.minimal-slider .slick-arrow.slick-next:hover:before { background-position: -50px -50px; }
 
-.aepo-slider-slide-content-wrapper { background: transparent url(../images/main@2x.jpg) no-repeat center center; background-size: cover; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-orient: horizontal; -webkit-box-direction: normal; -ms-flex-direction: row; flex-direction: row; min-height: 50vh; }
+.minimal-slider-slide-content-wrapper { background: transparent url(../images/main@2x.jpg) no-repeat center center; background-size: cover; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-orient: horizontal; -webkit-box-direction: normal; -ms-flex-direction: row; flex-direction: row; min-height: 50vh; }
 
-@media (min-width: 1200px) { .aepo-slider-slide-content-wrapper { height: 660px; } }
+@media (min-width: 1200px) { .minimal-slider-slide-content-wrapper { height: 660px; } }
 
-.aepo-slider-slide-content { -webkit-box-align: center; -ms-flex-align: center; align-items: center; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-direction: column; flex-direction: column; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; padding: 7.2rem calc(3rem + 50px + 10px); text-align: center; width: 100%; }
+.minimal-slider-slide-content { -webkit-box-align: center; -ms-flex-align: center; align-items: center; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-direction: column; flex-direction: column; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; padding: 7.2rem calc(3rem + 50px + 10px); text-align: center; width: 100%; }
 
-.aepo-slider-slide-tagline { font-size: 24px; font-weight: 300; letter-spacing: 5px; }
+.minimal-slider-slide-tagline { font-size: 24px; font-weight: 300; letter-spacing: 5px; }
 
-#home-widgets > .widget .aepo-buttons-wrapper { margin-top: 5rem; }
+#home-widgets > .widget .minimal-buttons-wrapper { margin-top: 5rem; }
 
-@media (max-width: 767px) { #home-widgets > .widget .aepo-buttons-wrapper .text-left, #home-widgets > .widget .aepo-buttons-wrapper .text-right { text-align: center; }
-  #home-widgets > .widget .aepo-buttons-wrapper [class*="col-"] + [class*="col-"] { margin-top: 2.8rem; } }
+@media (max-width: 767px) { #home-widgets > .widget .minimal-buttons-wrapper .text-left, #home-widgets > .widget .minimal-buttons-wrapper .text-right { text-align: center; }
+  #home-widgets > .widget .minimal-buttons-wrapper [class*="col-"] + [class*="col-"] { margin-top: 2.8rem; } }
 
-#home-widgets > .widget .aepo-usp-wrapper { margin-bottom: -6rem; margin-top: -2.8rem; }
+#home-widgets > .widget .minimal-usp-wrapper { margin-bottom: -6rem; margin-top: -2.8rem; }
 
-@media (max-width: 767px) { #home-widgets > .widget .aepo-usp-wrapper [class*="col-"] + [class*="col-"] { margin-top: 0; } }
+@media (max-width: 767px) { #home-widgets > .widget .minimal-usp-wrapper [class*="col-"] + [class*="col-"] { margin-top: 0; } }
 
-#home-widgets > .widget .aepo-usp { margin-bottom: 6rem; margin-top: 6rem; padding-right: 80px; position: relative; }
+#home-widgets > .widget .minimal-usp { margin-bottom: 6rem; margin-top: 6rem; padding-right: 80px; position: relative; }
 
-#home-widgets > .widget .aepo-usp:before { background: transparent url(../images/sprite-usp@2x.png) no-repeat 100% 0; background-size: 84px 73px; bottom: 0; content: ''; right: 0; position: absolute; top: 0; }
+#home-widgets > .widget .minimal-usp:before { background: transparent url(../images/sprite-usp@2x.png) no-repeat 100% 0; background-size: 84px 73px; bottom: 0; content: ''; right: 0; position: absolute; top: 0; }
 
-#home-widgets > .widget .aepo-usp-contractor:before { background-position: 100% -28px; height: 39px; margin-right: 14.5px; margin-top: -19.5px; top: 50%; width: 31px; }
+#home-widgets > .widget .minimal-usp-contractor:before { background-position: 100% -28px; height: 39px; margin-right: 14.5px; margin-top: -19.5px; top: 50%; width: 31px; }
 
-#home-widgets > .widget .aepo-usp-fleet:before { background-position: -31px -31px; height: 42px; margin-right: 9px; margin-top: -21px; top: 50%; width: 42px; }
+#home-widgets > .widget .minimal-usp-fleet:before { background-position: -31px -31px; height: 42px; margin-right: 9px; margin-top: -21px; top: 50%; width: 42px; }
 
-#home-widgets > .widget .aepo-usp-camera:before { background-position: 100% 0; height: 28px; margin-right: 4.5px; margin-top: -14px; top: 50%; width: 51px; }
+#home-widgets > .widget .minimal-usp-camera:before { background-position: 100% 0; height: 28px; margin-right: 4.5px; margin-top: -14px; top: 50%; width: 51px; }
 
-#home-widgets > .widget .aepo-usp-helmet:before { background-position: -51px 0; height: 31px; margin-right: 13.5px; margin-top: -15.5px; top: 50%; width: 33px; }
+#home-widgets > .widget .minimal-usp-helmet:before { background-position: -51px 0; height: 31px; margin-right: 13.5px; margin-top: -15.5px; top: 50%; width: 33px; }
 
-#home-widgets > .widget .aepo-client-wrapper { margin-top: 7.2rem; text-align: center; }
+#home-widgets > .widget .minimal-client-wrapper { margin-top: 7.2rem; text-align: center; }
 
-@media (min-width: 768px) { #home-widgets > .widget .aepo-client-wrapper { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-orient: horizontal; -webkit-box-direction: normal; -ms-flex-flow: row wrap; flex-flow: row wrap; -webkit-box-pack: justify; -ms-flex-pack: justify; justify-content: space-between; text-align: none; } }
+@media (min-width: 768px) { #home-widgets > .widget .minimal-client-wrapper { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-orient: horizontal; -webkit-box-direction: normal; -ms-flex-flow: row wrap; flex-flow: row wrap; -webkit-box-pack: justify; -ms-flex-pack: justify; justify-content: space-between; text-align: none; } }
 
-#home-widgets > .widget .aepo-client + .aepo-client { margin-top: 7.2rem; }
+#home-widgets > .widget .minimal-client + .minimal-client { margin-top: 7.2rem; }
 
-@media (min-width: 768px) { #home-widgets > .widget .aepo-client + .aepo-client { margin-top: 0; } }
+@media (min-width: 768px) { #home-widgets > .widget .minimal-client + .minimal-client { margin-top: 0; } }
 
-#home-widgets > .widget .aepo-client a { background-position: center center; background-repeat: no-repeat; display: inline-block; text-indent: -9999px; }
+#home-widgets > .widget .minimal-client a { background-position: center center; background-repeat: no-repeat; display: inline-block; text-indent: -9999px; }
 
-@media (min-width: 992px) { #home-widgets > .widget .aepo-client a { opacity: 0.35; }
-  #home-widgets > .widget .aepo-client a:hover { opacity: 1; } }
+@media (min-width: 992px) { #home-widgets > .widget .minimal-client a { opacity: 0.35; }
+  #home-widgets > .widget .minimal-client a:hover { opacity: 1; } }
 
-#home-widgets > .widget .aepo-client-fox a { background-image: url(../images/fox_logo@2x.png); background-size: 115px 38px; height: 38px; width: 115px; }
+#home-widgets > .widget .minimal-client-fox a { background-image: url(../images/fox_logo@2x.png); background-size: 115px 38px; height: 38px; width: 115px; }
 
-#home-widgets > .widget .aepo-client-hbo a { background-image: url(../images/hbo_logo@2x.png); background-size: 97px 39px; height: 39px; width: 97px; }
+#home-widgets > .widget .minimal-client-hbo a { background-image: url(../images/hbo_logo@2x.png); background-size: 97px 39px; height: 39px; width: 97px; }
 
-#home-widgets > .widget .aepo-client-rapha a { background-image: url(../images/rapha_logo@2x.png); background-size: 131px 57px; height: 57px; width: 131px; }
+#home-widgets > .widget .minimal-client-rapha a { background-image: url(../images/rapha_logo@2x.png); background-size: 131px 57px; height: 57px; width: 131px; }
 
-#home-widgets > .widget .aepo-client-apple a { background-image: url(../images/apple_logo@2x.png); background-size: 39px 47px; height: 47px; width: 39px; }
+#home-widgets > .widget .minimal-client-apple a { background-image: url(../images/apple_logo@2x.png); background-size: 39px 47px; height: 47px; width: 39px; }
 
-.aepo-posts-wrapper { margin-top: 7.2rem; }
+.minimal-posts-wrapper { margin-top: 7.2rem; }
 
-@media (min-width: 992px) { .aepo-posts-wrapper .row { display: -webkit-box; display: -ms-flexbox; display: flex; } }
+@media (min-width: 992px) { .minimal-posts-wrapper .row { display: -webkit-box; display: -ms-flexbox; display: flex; } }
 
-.aepo-posts-wrapper .row [class*="col-"] { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-orient: horizontal; -webkit-box-direction: normal; -ms-flex-direction: row; flex-direction: row; }
+.minimal-posts-wrapper .row [class*="col-"] { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-orient: horizontal; -webkit-box-direction: normal; -ms-flex-direction: row; flex-direction: row; }
 
-.aepo-post-slot { background-position: center center; background-repeat: no-repeat; background-size: cover; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-direction: column; flex-direction: column; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; margin-top: 20px; min-height: 300px; padding: 20px; position: relative; text-align: center; width: 100%; }
+.minimal-post-slot { background-position: center center; background-repeat: no-repeat; background-size: cover; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-direction: column; flex-direction: column; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; margin-top: 20px; min-height: 300px; padding: 20px; position: relative; text-align: center; width: 100%; }
 
-.aepo-posts-wrapper [class*="col-"]:first-child .aepo-post-slot { margin-top: 0; }
+.minimal-posts-wrapper [class*="col-"]:first-child .minimal-post-slot { margin-top: 0; }
 
-@media (min-width: 992px) { .aepo-post-slot { transition: -webkit-transform 250ms ease-in-out; transition: transform 250ms ease-in-out; transition: transform 250ms ease-in-out, -webkit-transform 250ms ease-in-out; }
-  .aepo-post-slot:hover { -webkit-transform: scale(1.1); transform: scale(1.1); }
-  .aepo-post-slot:hover:before { background-color: rgba(0, 0, 0, 0.3); } }
+@media (min-width: 992px) { .minimal-post-slot { transition: -webkit-transform 250ms ease-in-out; transition: transform 250ms ease-in-out; transition: transform 250ms ease-in-out, -webkit-transform 250ms ease-in-out; }
+  .minimal-post-slot:hover { -webkit-transform: scale(1.1); transform: scale(1.1); }
+  .minimal-post-slot:hover:before { background-color: rgba(0, 0, 0, 0.3); } }
 
-@media (min-width: 992px) { .aepo-post-slot { margin-top: 0; } }
+@media (min-width: 992px) { .minimal-post-slot { margin-top: 0; } }
 
-.aepo-post-slot:before { bottom: 0; content: ''; background-color: rgba(0, 0, 0, 0.3); right: 0; position: absolute; left: 0; top: 0; }
+.minimal-post-slot:before { bottom: 0; content: ''; background-color: rgba(0, 0, 0, 0.3); right: 0; position: absolute; left: 0; top: 0; }
 
-@media (min-width: 992px) { .aepo-post-slot:before { background-color: rgba(0, 0, 0, 0.1); transition: background-color 250ms ease-in-out; } }
+@media (min-width: 992px) { .minimal-post-slot:before { background-color: rgba(0, 0, 0, 0.1); transition: background-color 250ms ease-in-out; } }
 
-.aepo-post-slot > * { position: relative; width: 100%; }
+.minimal-post-slot > * { position: relative; width: 100%; }
 
-@media (min-width: 992px) { .aepo-post-date, .aepo-post-content, .aepo-post-read-more { display: none; }
-  .aepo-post-slot:hover .aepo-post-date, .aepo-post-slot:hover .aepo-post-content, .aepo-post-slot:hover .aepo-post-read-more { display: block; } }
+@media (min-width: 992px) { .minimal-post-date, .minimal-post-content, .minimal-post-read-more { display: none; }
+  .minimal-post-slot:hover .minimal-post-date, .minimal-post-slot:hover .minimal-post-content, .minimal-post-slot:hover .minimal-post-read-more { display: block; } }
 
-h4.aepo-post-title { margin-bottom: 0; }
+h4.minimal-post-title { margin-bottom: 0; }
 
-.aepo-post-date { font-weight: 500; margin-bottom: 5px; opacity: 0.5; }
+.minimal-post-date { font-weight: 500; margin-bottom: 5px; opacity: 0.5; }
 
-.aepo-post-content { font-weight: normal; }
+.minimal-post-content { font-weight: normal; }
 
-.aepo-post-read-more { font-weight: 700; margin-top: 20px; text-transform: uppercase; }
+.minimal-post-read-more { font-weight: 700; margin-top: 20px; text-transform: uppercase; }
 
 #lsx-testimonials-slider { margin-top: 7.2rem; }
 
