--- a/style.css
+++ b/style.css
@@ -1,11 +1,21 @@
 /*
-Theme Name:   Minimal
+Theme Name:   Minimal LSX
 Description:  Minimal LSX Child Theme
 Author:       LightSpeed
 Author URI:   https://www.lsdev.biz/
 Template:     lsx
-Version:      1.0.0
+Version:      1.1.1
 License:      GPL3
 License URI:  https://www.gnu.org/licenses/gpl-3.0.html
-Text Domain:  minimal-lsx-child
+Text Domain:  minimal-lsx
+Tags: portfolio, blog, e-commerce, one-column, two-columns, left-sidebar, right-sidebar, custom-background, custom-colors, custom-menu, editor-style, featured-images, post-formats, rtl-language-support, sticky-post, threaded-comments, translation-ready
+
+Parent Theme LSX, Copyright 2018 LightSpeed
+LSX Theme is distributed under the terms of the GNU General Public License v3.
+
+Minimal LSX Theme is the child theme of LSX Theme, Copyright 2018 LightSpeed
+Minimal LSX  under the terms of the GNU General Public License v3.
+
+Use it to make something cool, have fun, and share what you've learned with others.
+
 */
