--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ Description:  Minimal LSX Child Theme
 Author:       LightSpeed
 Author URI:   https://www.lsdev.biz/
 Template:     lsx
-Version:      1.1.1
+Version:      1.1.3
 License:      GPL3
 License URI:  https://www.gnu.org/licenses/gpl-3.0.html
 Text Domain:  minimal-lsx
@@ -14,7 +14,7 @@ Parent Theme LSX, Copyright 2018 LightSpeed
 LSX Theme is distributed under the terms of the GNU General Public License v3.
 
 Minimal LSX Theme is the child theme of LSX Theme, Copyright 2018 LightSpeed
-Minimal LSX  under the terms of the GNU General Public License v3.
+Minimal LSX is distributed under the terms of the GNU General Public License v3.
 
 Use it to make something cool, have fun, and share what you've learned with others.
 
