--- a/assets/css/scss/custom.scss
+++ b/assets/css/scss/custom.scss
@@ -137,3 +137,7 @@ a img.aligncenter {
 	z-index: 100000;
 	/* Above WP toolbar. */
 }
+
+.home.page-has-banner .minimal-slider {
+	display: none;
+}
