--- a/style.css
+++ b/style.css
@@ -1,10 +1,12 @@
 /*
 Theme Name:   Minimal LSX
-Description:  Minimal LSX Child Theme
+Description:  Minimal LSX Theme is the child theme of LSX Theme. The theme should only work with the parent theme installed https://wordpress.org/themes/lsx/ 
+The home main slider is a DEMO slider, you can turn it off on the Customize -> Layout options menu. If you want to add you own slider, you can do it using the LSX Banners plugin: https://wordpress.org/plugins/lsx-banners/
+Also, you can check out the rest of the LSX extensions: https://wordpress.org/plugins/tags/lsx/
 Author:       LightSpeed
 Author URI:   https://www.lsdev.biz/
 Template:     lsx
-Version:      1.1.4
+Version:      1.1.5
 License:      GPL3
 License URI:  https://www.gnu.org/licenses/gpl-3.0.html
 Text Domain:  minimal-lsx
