Updating the tags

--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 /*
 Theme Name: Minimal LSX
-Theme URI: 
-Author: feedmymedia
-Author URI: 
+Theme URI: https://wordpress.org/themes/lsx-design/
+Author: LightSpeed
+Author URI: https://www.lsdev.biz/
 Description: Minimal LSX Theme is the child theme of LSX Theme. The theme should only work with the parent theme installed https://wordpress.org/themes/lsx-design/
-Requires at least: 6.0
-Tested up to: 6.5
-Requires PHP: 5.7
-Version: 
+Version: 			1.3.0
+Tested up to: 		6.5
+Requires at least: 	6.0
+Requires PHP: 		7.4
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Template: lsx-design
