--- a/style.css
+++ b/style.css
@@ -12,6 +12,6 @@ License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Template: lsx-design
 Text Domain: minimal-lsx
-Tags: 
+Tags: blog, e-commerce, education
 */
 
